[package]
name = "csv2json"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
csv = "1.1.6"
indexmap = { version = "1.7.0", features = ["serde-1"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
unescape = "0.1.0"
